--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@ img.emoji {
 <h2 class="widget-title subheading heading-size-3">Recent Comments</h2>
 <nav role="navigation" aria-label="Recent Comments"><ul id="recentcomments">
 <li class="recentcomments">
+<span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/laptop/laptop-hp-340s-g7-i3/#comment-8">Laptop HP 340s G7 i3</a>
+</li>
+<li class="recentcomments">
 <span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/#comment-3">Chào tất cả mọi người!</a>
 </li>
 <li class="recentcomments">
