--- a/khong-phan-loai/chao-moi-nguoi/index.html
+++ b/khong-phan-loai/chao-moi-nguoi/index.html
@@ -433,7 +433,7 @@ Avatar của người bình luận sử dụng <a href="https://gravatar.com/">G
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="7c25c49cb6"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="239"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="213"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	
@@ -484,6 +484,9 @@ Avatar của người bình luận sử dụng <a href="https://gravatar.com/">G
 <div class="widget widget_recent_comments"><div class="widget-content">
 <h2 class="widget-title subheading heading-size-3">Recent Comments</h2>
 <nav role="navigation" aria-label="Recent Comments"><ul id="recentcomments">
+<li class="recentcomments">
+<span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/laptop/laptop-hp-340s-g7-i3/#comment-8">Laptop HP 340s G7 i3</a>
+</li>
 <li class="recentcomments">
 <span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/#comment-3">Chào tất cả mọi người!</a>
 </li>
