--- a/index.html
+++ b/index.html
@@ -90,10 +90,6 @@ img.emoji {
                     <div class="menu-menu2-container"><ul id="mobile-primary-menu" class="menu">
 <li id="menu-item-73" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-69 current_page_item menu-item-73"><a href="https://son89w.github.io/mywordpress/" aria-current="page">HomePage</a></li>
 <li id="menu-item-74" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-74"><a href="https://son89w.github.io/mywordpress/blogs/">Blogs</a></li>
-<li id="menu-item-92" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-92"><a href="https://son89w.github.io/mywordpress/cua-hang/">Cửa hàng</a></li>
-<li id="menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-93"><a href="https://son89w.github.io/mywordpress/gio-hang/">Giỏ hàng</a></li>
-<li id="menu-item-94" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-94"><a href="https://son89w.github.io/mywordpress/thanh-toan/">Thanh toán</a></li>
-<li id="menu-item-95" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="https://son89w.github.io/mywordpress/tai-khoan/">Tài khoản</a></li>
 </ul></div>                </nav><!-- #site-navigation -->
                             </div>
         </div> <!-- mobile-header ends -->
@@ -119,10 +115,6 @@ img.emoji {
         <div class="menu-menu2-container"><ul id="primary-menu" class="menu">
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-69 current_page_item menu-item-73"><a href="https://son89w.github.io/mywordpress/" aria-current="page">HomePage</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-74"><a href="https://son89w.github.io/mywordpress/blogs/">Blogs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-92"><a href="https://son89w.github.io/mywordpress/cua-hang/">Cửa hàng</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-93"><a href="https://son89w.github.io/mywordpress/gio-hang/">Giỏ hàng</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-94"><a href="https://son89w.github.io/mywordpress/thanh-toan/">Thanh toán</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-95"><a href="https://son89w.github.io/mywordpress/tai-khoan/">Tài khoản</a></li>
 </ul></div>    </nav><!-- #site-navigation -->
 	        </div>
     </div>
@@ -136,7 +128,7 @@ img.emoji {
             <div class="container">
                 <div class="text">
                     <h2 class="title">Laptop giá rẻ</h2>                            <div class="btn-holder">
-                                <a href="#" class="apply-now">Xem ngay</a>                            </div>
+                                <a href="https://gearvn.com/" class="apply-now">Xem ngay</a>                            </div>
                                         </div>
             </div>
         </div>
