--- a/laptop/laptop-hp-340s-g7-i3/index.html
+++ b/laptop/laptop-hp-340s-g7-i3/index.html
@@ -260,10 +260,7 @@ img.emoji {
 
 	<nav class="navigation post-navigation" role="navigation" aria-label="Posts">
 		<h2 class="screen-reader-text">Post navigation</h2>
-		<div class="nav-links">
-<div class="nav-previous"><a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/" rel="prev">Chào tất cả mọi người!</a></div>
-<div class="nav-next"><a href="https://son89w.github.io/mywordpress/khong-phan-loai/laptop-asus-rog-zephyrus-duo-15-gx551/" rel="next">Laptop ASUS ROG ZEPHYRUS DUO 15 GX551</a></div>
-</div>
+		<div class="nav-links"><div class="nav-next"><a href="https://son89w.github.io/mywordpress/khong-phan-loai/laptop-asus-rog-zephyrus-duo-15-gx551/" rel="next">Laptop ASUS ROG ZEPHYRUS DUO 15 GX551</a></div></div>
 	</nav>
 <div class="comment-form">
     <div class="comments-area form">
@@ -282,7 +279,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="98d6aeaee2"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="51"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="108"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	
@@ -314,21 +311,15 @@ img.emoji {
 											<li>
 					<a href="https://son89w.github.io/mywordpress/laptop/laptop-hp-340s-g7-i3/" aria-current="page">Laptop HP 340s G7 i3</a>
 									</li>
-											<li>
-					<a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/">Chào tất cả mọi người!</a>
-									</li>
 					</ul>
 
 		</section><section id="recent-comments-2" class="widget widget_recent_comments"><h2 class="widget-title">Recent Comments</h2>
 <ul id="recentcomments">
 <li class="recentcomments">
-<span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/#comment-3">Chào tất cả mọi người!</a>
+<span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/laptop-asus-rog-zephyrus-duo-15-gx551/#comment-11">Laptop ASUS ROG ZEPHYRUS DUO 15 GX551</a>
 </li>
 <li class="recentcomments">
-<span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">son</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/#comment-2">Chào tất cả mọi người!</a>
-</li>
-<li class="recentcomments">
-<span class="comment-author-link"><a href="https://wordpress.org/" rel="external nofollow ugc" class="url">Một người bình luận WordPress</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/chao-moi-nguoi/#comment-1">Chào tất cả mọi người!</a>
+<span class="comment-author-link"><a href="https://son89w.github.io/mywordpress" rel="external nofollow ugc" class="url">Hoàng Châu</a></span> on <a href="https://son89w.github.io/mywordpress/khong-phan-loai/laptop-asus-rog-zephyrus-duo-15-gx551/#comment-10">Laptop ASUS ROG ZEPHYRUS DUO 15 GX551</a>
 </li>
 </ul></section><section id="archives-2" class="widget widget_archive"><h2 class="widget-title">Archives</h2>
 			<ul>
